Correct spacing between Photos/Friends Index and ProfileNav.

--- a/app/assets/stylesheets/friends.css.scss
+++ b/app/assets/stylesheets/friends.css.scss
@@ -1,6 +1,7 @@
 .friends-container {
   width: 851px;
   margin: auto;
+  margin-top: 10px;
   background-color: white;
   border: 1px solid #ccc;
 }
