--- a/app/assets/stylesheets/photo_index.css.scss
+++ b/app/assets/stylesheets/photo_index.css.scss
@@ -1,6 +1,7 @@
 .photo-index-container {
   width: 851px;
   margin: auto;
+  margin-top: 10px;
   background-color: transparent;
   border: 1px solid #ccc;
 }
